--- a/main/static/main/index.css
+++ b/main/static/main/index.css
@@ -4,7 +4,7 @@
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, button, abbr, acronym, address, code, del, 
 dfn, em, img, strong, sub, sup, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, 
 td, hr{margin:0;padding:0;font-size:100%;box-sizing: border-box;}
-body{height:100%;min-height:100%;font-family:'Noto Sans Korean','Malgun Gothic','맑은고딕','돋움',dotum, sans-serif;font-size:16px;color:#737373;line-height:1.5; background:url(images/content_bg4.png) repeat;}
+body{height:100%;min-height:100%;font-family:'Noto Sans Korean','Malgun Gothic','맑은고딕','돋움',dotum, sans-serif;font-size:16px;color:#737373;line-height:1.5;}
 h1, h2, h3, h4, h5, h6 {font-weight:normal}
 ol, ul, li {list-style:none}
 table {width:100%; border-collapse:collapse;border-spacing:0}
@@ -25,20 +25,20 @@ html,body{height:100%;}
 
 #container {display: flex; flex-direction: column; width: 960px; margin: 0 auto;}
 #container #headcontainer {display: flex; flex-direction: row; align-items: flex-end; width: 960px; margin-top: 24px;}
-#container #headcontainer #logo {color: white; font-size: 48px; font-weight: 900;}
+#container #headcontainer #logo {color: black; font-size: 48px; font-weight: 900;}
 #container #headcontainer #logo:hover {color: #ed4147;}
-#container #headcontainer #title {color: white; font-size: 24px; font-weight: 400; margin-left: 24px; margin-bottom: 10px;}
-#container #headcontainer .link {color: white; font-size: 20px; font-weight: 400;}
+#container #headcontainer #title {color: black; font-size: 24px; font-weight: 400; margin-left: 24px; margin-bottom: 10px;}
+#container #headcontainer .link {color: black; font-size: 20px; font-weight: 400;}
 #container #headcontainer .link:hover {color: #ed4147;}
 #container #headcontainer #link_login {margin-left: 200px;}
-#container #headcontainer #logout {border: 0; color: white; font-size: 20px; font-weight: 400; margin-left: 260px; cursor: pointer; background-image: url(images/content_bg4.png); margin-bottom: 10px;}
+#container #headcontainer #logout {border: 0; color: black; font-size: 20px; font-weight: 400; margin-left: 260px; cursor: pointer; margin-bottom: 10px;}
 #container #headcontainer #logout:hover {color: #ed4147;}
 #container header:after {content: ""; display: block; width: 100%; height: 2px; background: #ed4147;}
 
-#container #content #hellouser {float: right; color: white; font-size: 20px; font-weight: 400; margin-right: 30px;}
+#container #content #hellouser {float: right; color: black; font-size: 20px; font-weight: 400; margin-right: 30px;}
 
 
 #container footer:before {content: ""; display: block; width: 100%; height: 2px; background: #ed4147;}
 #container footer {width: 960px; margin-top: 48px; margin-bottom: 16px;}
 #container footer #footcontainer {display: flex; justify-content: center; }
-#container footer #footcontainer p {color: white; font-size: 24px; font-weight: 400;}
+#container footer #footcontainer p {color: black; font-size: 24px; font-weight: 400;}
