--- a/accounts/templates/accounts/sign_up.html
+++ b/accounts/templates/accounts/sign_up.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traivel</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'accounts/accounts.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'accounts/account.css' %}">
 </head>
 <body>
     <div id="container">
