--- a/traivel_web/accounts/static/accounts/accounts.css
+++ b/traivel_web/accounts/static/accounts/accounts.css
@@ -8,7 +8,7 @@ body{height:100%;min-height:100%;font-family:'Noto Sans Korean','Malgun Gothic',
 h1, h2, h3, h4, h5, h6 {font-weight:normal}
 ol, ul, li {list-style:none}
 table {width:100%; border-collapse:collapse;border-spacing:0}
-fieldset, iframe {display:block;border: 2px solid #ed4147;}
+fieldset, iframe {display:block;border: 2px solid blue;}
 img, button {border:0 none;vertical-align:top;}
 hr {height:0; display:none}
 i, em, address{font-style:normal}
@@ -26,17 +26,16 @@ html,body{height:100%;}
 #container {display: flex; flex-direction: column; width: 960px; margin: 0 auto;}
 #container #headcontainer {display: flex; flex-direction: row; align-items: flex-end; width: 960px; margin-top: 24px;}
 #container #headcontainer #logo {color: black; font-size: 48px; font-weight: 900;}
-#container #headcontainer #logo:hover {color: #ed4147;}
-#container #headcontainer #title {color: black; font-size: 24px; font-weight: 500; margin-left: 24px; margin-bottom: 10px;}
+#container #headcontainer #logo:hover {color: blue;}
+#container #headcontainer #title {color: black; font-size: 24px; font-weight: 400; margin-left: 24px; margin-bottom: 10px;}
 #container #headcontainer .link {color: black; font-size: 20px; font-weight: 400;}
-#container #headcontainer .link:hover {color: #ed4147;}
+#container #headcontainer .link:hover {color: blue;}
 #container #headcontainer #link_login {margin-left: 200px;}
 #container #headcontainer #logout {border: 0; color: black; font-size: 20px; font-weight: 400; margin-left: 260px; cursor: pointer; margin-bottom: 10px;}
-#container #headcontainer #logout:hover {color: #ed4147;}
-#container header:after {content: ""; display: block; width: 100%; height: 2px; background: #ed4147;}
+#container #headcontainer #logout:hover {color: blue;}
+#container header:after {content: ""; display: block; width: 100%; height: 2px; background: blue;}
 
 #container #content {display: flex; flex-direction: column;}
-#container #content .error {color: black; font-size: 24px; font-weight: 500; width: 960px; text-align: center;}
 #container #content h1 {color: black; font-size: 36px; font-weight: 700; margin-top: 36px; margin-bottom: 48px;}
 #container #content #form {display: flex; flex-direction: column; justify-content: space-between;}
 #container #content #form fieldset {margin-bottom: 48px; padding: 16px;}
@@ -44,15 +43,15 @@ html,body{height:100%;}
 #container #content #form fieldset ul {display: flex; flex-direction: column; justify-content: flex-end;}
 #container #content #form fieldset ul .form_group {display: flex; justify-content: space-between; margin-bottom: 12px;}
 #container #content #form fieldset ul .form_group label {color: black; font-size: 24px; font-weight: 400; text-align: right; width: 150px;}
-#container #content #form fieldset ul .form_group input {width: 700px; height: 36px; border: 2px solid #ed4147; margin-right: 50px; color: black; padding-left: 8px;}
+#container #content #form fieldset ul .form_group input {width: 700px; height: 36px; border: 2px solid blue; margin-right: 50px; color: white; padding-left: 8px;}
 #container #content #form fieldset ul .form_group input::placeholder {color: black; padding-left: 8px; font-size: 20px; font-weight: 400;}
-#container #content #form fieldset ul .form_group select {width: 200px; height: 36px; color: black; margin-left: 25px; padding-left: 10px; border: 2px solid #ed4147;}
+#container #content #form fieldset ul .form_group select {width: 200px; height: 36px; color: black; margin-left: 26px; border: 2px solid blue;}
 #container #content #form fieldset ul #select_group {display: flex; justify-content: flex-start;}
 #container #content #form #button {width: 960px; display: flex; justify-content: center;}
 #container #content #form #button .submit {width: 100px; border: 0px; color: black; font-size: 24px; cursor: pointer; background-color: white;}
-#container #content #form #button .submit:hover {color: #ed4147;}
+#container #content #form #button .submit:hover {color: blue;}
 
-#container footer:before {content: ""; display: block; width: 100%; height: 2px; background: #ed4147;}
+#container footer:before {content: ""; display: block; width: 100%; height: 2px; background: blue;}
 #container footer {width: 960px; margin-top: 48px; margin-bottom: 16px;}
 #container footer #footcontainer {display: flex; justify-content: center; }
 #container footer #footcontainer p {color: black; font-size: 24px; font-weight: 400;}
