--- a/traivel_web/traivel_web/main/templates/main/index.html
+++ b/traivel_web/traivel_web/main/templates/main/index.html
@@ -37,7 +37,39 @@
                 </div>
             {% endif %}
             <div class="box_container">
-                <div class="box"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3287844.4152572025!2d128.63505411681268!3d36.414383168052474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2skr!4v1599664464239!5m2!1sen!2skr" width="470" height="480" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+                <div class="box">
+                    <div id="map" style="width:470px;height:480px;"></div>
+
+                    <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1af62556a70c9e5071ea3e98242ca6d7"></script>
+                    <script>
+                        var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+                            mapOption = {
+                                center: new kakao.maps.LatLng(37.56551, 126.97795), // 지도의 중심좌표
+                                level: 11, // 지도의 확대 레벨
+                                mapTypeId : kakao.maps.MapTypeId.ROADMAP // 지도종류
+                            }; 
+
+                        // 지도를 생성한다 
+                        var map = new kakao.maps.Map(mapContainer, mapOption); 
+                        //지도에 마커를 생성하고 표시
+                        var marker = new kakao.maps.Marker({
+                            position: new kakao.maps.LatLng(37.56551, 126.97795),
+                            map: map //마커를 표시할 지도 객체
+                        });
+                        marker.setMap(map);
+
+                        var iwContent = '<div style="padding:5px;">출발! <br><a href="https://map.kakao.com/link/map/Hello World!,33.450701,126.570667" style="color:blue" target="_blank">큰지도보기</a> <a href="https://map.kakao.com/link/to/Hello World!,33.450701,126.570667" style="color:blue" target="_blank">길찾기</a></div>'; // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+                            //인포윈도우 표시 위치입니다
+
+                        // 인포윈도우를 생성합니다
+                        var infowindow = new kakao.maps.InfoWindow({
+                            content : iwContent 
+                        });
+                        
+                        // 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
+                        infowindow.open(map, marker); 
+                    </script>
+                </div>
                 <div class="box">
                     <div class="input_box", id="travel_region">
                         <div class="name_box">지역</div>
