--- a/traivel_web/main/templates/main/index.html
+++ b/traivel_web/main/templates/main/index.html
@@ -6,10 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traivel</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'main/index.css' %}">
-    <script src="{% static 'main/jquery.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'main/home.css' %}">
 </head>
-
 <body>
     <div id="container">
         <header>
@@ -36,7 +34,6 @@
                 </div>
             {% endif %}
 
-
             <div class="box_container">
                 <div class="box"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3287844.4152572025!2d128.63505411681268!3d36.414383168052474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2skr!4v1599664464239!5m2!1sen!2skr" width="470" height="480" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
                 <div class="box">
@@ -52,13 +49,13 @@
                     <div class="keyword_box", id="keyword">
                         <div class="keyword_label">키워드</div>
                         <form method="POST">
-                            <input type="button" value="#클릭" class="key_btn">
-                            <input type="button" value="#클릭" class="key_btn">
-                            <input type="button" value="#클릭" class="key_btn">
-                            <input type="button" value="#클릭" class="key_btn">
-                            <input type="button" value="#클릭" class="key_btn">
-                            <input type="button" value="#클릭" class="key_btn">
-                            <input type="button" value="#클릭" class="key_btn">
+                            <input type="button" value="#클릭1" class="key_btn" name="#click1">
+                            <input type="button" value="#클릭2" class="key_btn" name="#click2">
+                            <input type="button" value="#클릭3" class="key_btn" name="#click3">
+                            <input type="button" value="#클릭4" class="key_btn" name="#click4">
+                            <input type="button" value="#클릭5" class="key_btn" name="#click5">
+                            <input type="button" value="#클릭6" class="key_btn" name="#click6">
+                            <input type="button" value="#클릭7" class="key_btn" name="#click7">
                         </form>
                     </div> 
                 </div>
@@ -67,13 +64,24 @@
             <div class="footer_box">
                 <div class="picture_box">
                     <div class="picture_label">여행장소 추천</div>
-                    <button type="button" class="arrow"><img src="./static/main/images/btn1.png" width="45"></button>
-                    <div class="picture">사진1</div>
-                    <div class="picture">사진2</div>
-                    <div class="picture">사진3</div>
-                    <div class="picture">사진4</div>
-                    <div class="picture">사진5</div>
-                    <button type="button" class="arrow"><img src="./static/main/images/btn2.png" width="45" ></button>
+                    <button type="button" class="arrow" id="arrow_left"><img src="./static/main/images/btn1.png" width="45"></button>
+                    <div id="roll">
+                        <ul>
+                            <li class="picture" id="picture1">사진1</li>
+                            <li class="picture" id="picture2">사진2</li>
+                            <li class="picture" id="picture3">사진3</li>
+                            <li class="picture" id="picture4">사진4</li>
+                            <li class="picture" id="picture5">사진5</li>
+                            <li class="picture" id="picture6">사진6</li>
+                            <li class="picture" id="picture7">사진7</li>
+                            <li class="picture" id="picture8">사진8</li>
+                            <li class="picture" id="picture9">사진9</li>
+                        </ul>
+                        <form method="POST">
+                            <input type="hidden" name="type" value="">
+                        </form>
+                    </div>
+                    <button type="button" class="arrow" id="arrow_right"><img src="./static/main/images/btn2.png" width="45" ></button>
                 </div>
             </div>
         </section>
@@ -83,5 +91,7 @@
             </div>
         </footer>
     </div>
+    <script src="{% static 'main/jquery.js' %}"></script>
+    <script src="{% static 'main/homehome.js' %}"></script>
 </body>
 </html>
