--- a/traivel_web/accounts/static/accounts/accounts.css
+++ b/traivel_web/accounts/static/accounts/accounts.css
@@ -43,12 +43,12 @@ html,body{height:100%;}
 #container #content #form fieldset ul {display: flex; flex-direction: column; justify-content: flex-end;}
 #container #content #form fieldset ul .form_group {display: flex; justify-content: space-between; margin-bottom: 12px;}
 #container #content #form fieldset ul .form_group label {color: black; font-size: 24px; font-weight: 400; text-align: right; width: 150px;}
-#container #content #form fieldset ul .form_group input {width: 700px; height: 36px; border: 2px solid blue; margin-right: 50px; color: white; padding-left: 8px;}
+#container #content #form fieldset ul .form_group input {width: 700px; height: 36px; border: 2px solid blue; margin-right: 50px; color: black; padding-left: 8px;}
 #container #content #form fieldset ul .form_group input::placeholder {color: black; padding-left: 8px; font-size: 20px; font-weight: 400;}
 #container #content #form fieldset ul .form_group select {width: 200px; height: 36px; color: black; margin-left: 26px; border: 2px solid blue;}
 #container #content #form fieldset ul #select_group {display: flex; justify-content: flex-start;}
 #container #content #form #button {width: 960px; display: flex; justify-content: center;}
-#container #content #form #button .submit {width: 100px; border: 0px; color: black; font-size: 24px; cursor: pointer; background-color: white;}
+#container #content #form #button .submit {width: 100px; border: 0px; color: black; font-size: 24px; cursor: pointer; background-color: black;}
 #container #content #form #button .submit:hover {color: blue;}
 
 #container footer:before {content: ""; display: block; width: 100%; height: 2px; background: blue;}
