--- a/traivel_web/main/static/main/index.css
+++ b/traivel_web/main/static/main/index.css
@@ -37,7 +37,7 @@ button{background-color:white; border:none;}
 #container header:after {content: ""; display: block; width: 100%; height: 2px; background: blue;}
 
 #container #content #hellouser {float: right; color: black; font-size: 20px; font-weight: 400; margin-right: 30px;}
-
+#container #content #error {color: black; font-size: 36px; font-weight: 700; text-align: center; width: 960px; margin-top: 60px;}
 .box_container{
     width : 960px;
     height : 520px;
