--- a/traivel_web/main/templates/main/result.html
+++ b/traivel_web/main/templates/main/result.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traivel</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'main/home.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'main/index.css' %}">
 </head>
 <body>
     <div id="container">
@@ -37,9 +37,19 @@
             <div class="box_container">
                 <div class="box"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3287844.4152572025!2d128.63505411681268!3d36.414383168052474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2skr!4v1599664464239!5m2!1sen!2skr" width="470" height="480" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
                 <div class="box">
-                    {{ region.0 }}
-                    {{ keyword }}
-                    {{ Type }}
+                    {{ region }}
+                    <br>
+                    <br>
+                    {% for word in keyword %}
+                        {{ word }}
+                        <br>
+                    {% endfor %}
+                    <br>
+                    <br>
+                    {% for word in Type %}
+                        {{ word }}
+                        <br>
+                    {% endfor %}
                 </div>
             </div>
         </section>
