--- a/traivel_web/main/templates/main/index.html
+++ b/traivel_web/main/templates/main/index.html
@@ -49,11 +49,25 @@
                 <div class="box">
                     <div class="input_box", id="travel_region">
                         <div class="name_box">지역</div>
-                        <form method="POST">
-                            {% csrf_token %}
-                            <input type="text" id="region" name="region" style="width:260px" value={{ region }}>
-                            <button type='submit'><img src="./static/main/images/btn.png" width="33" height="35" alt="검색"></button>
-                        </form>
+                            <select id="region_sel" onchange="setCenter(this.value)" style="width:290px">
+                                <option value="seoul">서울특별시</option> 
+                                <option value="incheon">인천광역시</option>
+                                <option value="gwangju">광주광역시</option>
+                                <option value="busan">부산광역시</option>
+                                <option value="daegu">대구광역시</option>
+                                <option value="daejeon">대전광역시</option>
+                                <option value="ulsan">울산광역시</option>
+                                <option value="sejong">세종특별자치시</option>
+                                <option value="gyeonggi">경기도</option>
+                                <option value="gangwon">강원도</option>
+                                <option value="chungcheong_north">충청북도</option>
+                                <option value="chungcheong_south">충청남도</option>
+                                <option value="jeolla_north">전라북도</option>
+                                <option value="jeolla_south">전라남도</option>
+                                <option value="gyeongsang_north">경상북도</option>
+                                <option value="gyeongsang_south">경상남도</option>
+                                <option value="jeju">제주도</option>
+                            </select>
                     </div>
                     
                     <div class="keyword_box", id="keyword">
