--- a/traivel_web/main/templates/main/index.html
+++ b/traivel_web/main/templates/main/index.html
@@ -49,25 +49,28 @@
                 <div class="box">
                     <div class="input_box", id="travel_region">
                         <div class="name_box">지역</div>
-                            <select id="region_sel" onchange="setCenter(this.value)" style="width:290px">
-                                <option value="seoul">서울특별시</option> 
-                                <option value="incheon">인천광역시</option>
-                                <option value="gwangju">광주광역시</option>
-                                <option value="busan">부산광역시</option>
-                                <option value="daegu">대구광역시</option>
-                                <option value="daejeon">대전광역시</option>
-                                <option value="ulsan">울산광역시</option>
-                                <option value="sejong">세종특별자치시</option>
-                                <option value="gyeonggi">경기도</option>
-                                <option value="gangwon">강원도</option>
-                                <option value="chungcheong_north">충청북도</option>
-                                <option value="chungcheong_south">충청남도</option>
-                                <option value="jeolla_north">전라북도</option>
-                                <option value="jeolla_south">전라남도</option>
-                                <option value="gyeongsang_north">경상북도</option>
-                                <option value="gyeongsang_south">경상남도</option>
-                                <option value="jeju">제주도</option>
-                            </select>
+                            <form method="POST" action="{% url 'main:result' %}">
+                                {% csrf_token %}
+                                <select id="region_sel" onchange="setCenter(this.value)" style="width:290px" name="region">
+                                    <option value="seoul">서울특별시</option> 
+                                    <option value="incheon">인천광역시</option>
+                                    <option value="gwangju">광주광역시</option>
+                                    <option value="busan">부산광역시</option>
+                                    <option value="daegu">대구광역시</option>
+                                    <option value="daejeon">대전광역시</option>
+                                    <option value="ulsan">울산광역시</option>
+                                    <option value="sejong">세종특별자치시</option>
+                                    <option value="gyeonggi">경기도</option>
+                                    <option value="gangwon">강원도</option>
+                                    <option value="chungcheong_north">충청북도</option>
+                                    <option value="chungcheong_south">충청남도</option>
+                                    <option value="jeolla_north">전라북도</option>
+                                    <option value="jeolla_south">전라남도</option>
+                                    <option value="gyeongsang_north">경상북도</option>
+                                    <option value="gyeongsang_south">경상남도</option>
+                                    <option value="jeju">제주도</option>
+                                </select>
+                            
                     </div>
                     
                     <div class="keyword_box", id="keyword">
@@ -103,10 +106,8 @@
                     <button type="button" class="arrow" id="arrow_right"><img src="./static/main/images/btn2.png" width="45" ></button>
                 </div>
             </div>
-            <form method="POST" action="{% url 'main:result' %}">
-                {% csrf_token %}
-                <input type="hidden" name="region" value="{{ region }}" id="region_search" class="region_search">
-
+            
+                
                 <input type="hidden" name="keyword" value="" id="inputkeyword1" class="inputkeyword">
                 <input type="hidden" name="keyword" value="" id="inputkeyword2" class="inputkeyword">
                 <input type="hidden" name="keyword" value="" id="inputkeyword3" class="inputkeyword">
