--- a/traivel_web/main/templates/main/result.html
+++ b/traivel_web/main/templates/main/result.html
@@ -40,6 +40,7 @@
                     <script src="{% static 'main/map.js' %}"></script>
                 </div>
                 <div class="box">
+                    {{ region }}
                     <br>
                     {% for word in keyword %}
                         {{ word }}
