--- a/traivel_web/main/templates/main/index.html
+++ b/traivel_web/main/templates/main/index.html
@@ -15,7 +15,12 @@
     <script src="{% static 'main/index.js' %}"></script>
     <script>
         function complete(data) {
-            console.log(data);
+            for(var i=0; i<data.length; i++){
+            console.log(data[i])
+
+            var marker=create_marker(data[i]['latitude'], data[i]['longitude'])
+            console.log(marker)
+            }
         }
         function btntest(){
             $.ajax({
@@ -148,7 +153,8 @@
 
                 <div id="resultbox">
                     <button type="submit" id="result">여행지 검색</button>
-                    <input type="button" onclick="btntest()" value="검색"/>
+                    <input type="button" onclick="btntest()" value="검색"/> 
+                    {% comment %} <input type="button" onclick="btntest()" value="여행지 검색"/>{% endcomment %}
                     </div>
             </form>
         </section>
