--- a/traivel_web/main/templates/main/index.html
+++ b/traivel_web/main/templates/main/index.html
@@ -8,18 +8,21 @@
     <title>Traivel</title>
     <link rel="stylesheet" type="text/css" href="{% static 'main/index.css' %}">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-
 </head>
 <body>
     <script src="{% static 'main/index.js' %}"></script>
     <script>
         function complete(data) {
-            console.log(data);
+            for(var i=0; i<data.length; i++){
+            console.log(data[i])
+
+            var marker=create_marker(data[i]['latitude'], data[i]['longitude'])
+            console.log(marker)
+            }
         }
         function btntest(){
             $.ajax({
-                url:'http://127.0.0.1:8000/main/getaddr/',
+                url:'http://127.0.0.1:8000/main/api/getaddr/',
                 type:'get',
                 success:  complete,
                 error: function (request, status, error){   
@@ -66,7 +69,7 @@
                 <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=1af62556a70c9e5071ea3e98242ca6d7"></script>
                 <script src="{% static 'main/map.js' %}"></script>
                 </div>
-                <div class="box">
+                <div class="box" id="inputbox">
                     <div class="input_box", id="travel_region">
                         <div class="name_box">지역</div>
                             <form method="GET" action="{% url 'index' %}">
@@ -147,11 +150,14 @@
                 <input type="hidden" name="type" value="" id="inputpicture9" class="inputpicture">
 
                 <div id="resultbox">
-                    <button type="submit" id="result">여행지 검색</button>
-                    <input type="button" onclick="btntest()" value="검색"/>
-                    </div>
+                    <input type="button" onclick="btntest()" value="여행지 검색" id="result"/>
+                </div>
             </form>
         </section>
+        <div id="choose">
+            <ul id="chosenList">
+            </ul>
+        </div>
         <footer>
             <div id="footcontainer">
                 <p>광주 인공지능 사관학교 팀 프로젝트</p>
