select marker add

--- a/traivel_web/main/templates/main/index.html
+++ b/traivel_web/main/templates/main/index.html
@@ -151,6 +151,8 @@
 
                 <div id="resultbox">
                     <input type="button" onclick="btntest()" value="여행지 검색" id="result"/>
+                    <input type="button" onclick="select_marker()" value="선택장소보기"/>
+
                 </div>
             </form>
         </section>
